fix spacing for first and last items in front-page cols

--- a/css/responsive/laptop.styl
+++ b/css/responsive/laptop.styl
@@ -50,7 +50,7 @@ $footer-height = 80px
   
 .front-image-holder 
   width: 100%
-  height: calc('100vh - ' + ($header-height + $footer-height))
+  height: auto
   padding: $margin-basic 0 
   a
     height: 100%
