--- a/css/responsive/monitor.styl
+++ b/css/responsive/monitor.styl
@@ -23,9 +23,6 @@ $footer-height = 81px
 .scroll-col-right
   padding: $header-height $margin-small $footer-height
   
-.front-image-holder 
-  height: calc('100vh - ' + ($header-height + $footer-height))
-  
 // ******************************************************
 
 // SINGLE PROJECT
